Extend and add export function using bbox

--- a/lib/config/citygmlv3.conf
+++ b/lib/config/citygmlv3.conf
@@ -1,6 +1,8 @@
-# --------------------
-# BASIC CONFIGURATIONS
-# --------------------
+# USE CASE
+# 0: Map only using the configurations in this file
+# 1: Export only using an existing database configured in this file
+# 2: Map AND Export using the configurations in this file
+case = 0
 
 # DATABASE CONFIGURATIONS
 # .......................
@@ -14,13 +16,16 @@ db.name = "neo4j"
 # Number of database transactions to be processed before committing
 db.batch.size = 1000
 
+# Keep database online
+db.online = false
+
 # MAPPER CONFIGURATIONS
 # .....................
 
 # Input dataset to map onto graphs, can have multiple files/directories
 # If a path is a directory, ALL files in that folder shall be imported as one
 mapper.dataset.paths = [
-  "input/fzk_haus_lod2_v3.gml"
+  "input/fzk_haus_lod3_v3.gml"
 ]
 
 # Do not map the following vertex classes (e.g. com.example.project.Class)
@@ -38,11 +43,6 @@ mapper.concurrent.timeout = 360000
 
 # Batch size for top-level features
 mapper.toplevel.batch.size = 10
-
-# -----------------------------------
-# EXTENDED CONFIGURATIONS
-# (MUST BE IMPLEMENTED IN SUBCLASSES)
-# -----------------------------------
 
 # NEO4J CONFIGURATIONS
 # ....................
@@ -64,3 +64,8 @@ neo4j.rtree.img.path = "output/img"
 
 # CityGML version
 citygml.version = "v3_0"
+
+# CityGML export
+citygml.export.partition = 0
+citygml.export.bbox = "457842.0, 5439083.0, 111.8, 457854.0, 5439093.0, 118.3"
+citygml.export.path = "output/citygml/export_v3.gml"
