--- a/lib/config/citygmlv2.conf
+++ b/lib/config/citygmlv2.conf
@@ -1,6 +1,8 @@
-# --------------------
-# BASIC CONFIGURATIONS
-# --------------------
+# USE CASE
+# 0: Map only using the configurations in this file
+# 1: Export only using an existing database configured in this file
+# 2: Map AND Export using the configurations in this file
+case = 1
 
 # DATABASE CONFIGURATIONS
 # .......................
@@ -13,6 +15,9 @@ db.name = "neo4j"
 
 # Number of database transactions to be processed before committing
 db.batch.size = 1000
+
+# Keep database online
+db.online = false
 
 # MAPPER CONFIGURATIONS
 # .....................
@@ -39,11 +44,6 @@ mapper.concurrent.timeout = 360000
 # Batch size for top-level features
 mapper.toplevel.batch.size = 10
 
-# -----------------------------------
-# EXTENDED CONFIGURATIONS
-# (MUST BE IMPLEMENTED IN SUBCLASSES)
-# -----------------------------------
-
 # NEO4J CONFIGURATIONS
 # ....................
 
@@ -64,3 +64,8 @@ neo4j.rtree.img.path = "output/img"
 
 # CityGML version
 citygml.version = "v2_0"
+
+# CityGML export
+citygml.export.partition = 0
+citygml.export.bbox = "457842.0, 5439083.0, 111.8, 457854.0, 5439093.0, 118.3"
+citygml.export.path = "output/citygml/export_v2.gml"
