--- a/lib/config/examples/citygmlv2.conf
+++ b/lib/config/examples/citygmlv2.conf
@@ -1,6 +1,8 @@
-# --------------------
-# BASIC CONFIGURATIONS
-# --------------------
+# USE CASE
+# 0: Map only using the configurations in this file
+# 1: Export only using an existing database configured in this file
+# 2: Map AND Export using the configurations in this file
+case = 1
 
 # DATABASE CONFIGURATIONS
 # .......................
@@ -14,12 +16,17 @@ db.name = "neo4j"
 # Number of database transactions to be processed before committing
 db.batch.size = 1000
 
+# Keep database online
+db.online = false
+
 # MAPPER CONFIGURATIONS
 # .....................
 
 # Input dataset to map onto graphs, can have multiple files/directories
 # If a path is a directory, ALL files in that folder shall be imported as one
-mapper.dataset.paths = []
+mapper.dataset.paths = [
+  "input/fzk_haus_lod2_v2.gml"
+]
 
 # Do not map the following vertex classes (e.g. com.example.project.Class)
 # This can be a super class, such as "java.lang.Object" will exclude ALL objects
@@ -27,19 +34,15 @@ mapper.exclude.vertex.classes = []
 
 # Do not map the following edge types
 mapper.exclude.edge.types = [
-  "this$0" # used for inner classes
+  "this$0", # used for inner classes
+  "associableClass", "cityGMLClass", "gMLClass", "module", "parent" # used for CityGML objects
 ]
 
 # Max. wait time in seconds for mapper threads to finish
-mapper.concurrent.timeout = 600
+mapper.concurrent.timeout = 360000
 
 # Batch size for top-level features
 mapper.toplevel.batch.size = 10
-
-# -----------------------------------
-# EXTENDED CONFIGURATIONS
-# (MUST BE IMPLEMENTED IN SUBCLASSES)
-# -----------------------------------
 
 # NEO4J CONFIGURATIONS
 # ....................
@@ -55,3 +58,14 @@ neo4j.rtree.store = true
 
 # Folder location for RTree footprint imagee
 neo4j.rtree.img.path = "output/img"
+
+# CITYGML CONFIGURATIONS
+# ......................
+
+# CityGML version
+citygml.version = "v2_0"
+
+# CityGML export
+citygml.export.partition = 0
+citygml.export.bbox = "457842.0, 5439083.0, 111.8, 457854.0, 5439093.0, 118.3"
+citygml.export.path = "output/citygml/export_v2.gml"
