Add support for read and write CityJSON

--- a/lib/config/examples/citygmlv3.conf
+++ b/lib/config/examples/citygmlv3.conf
@@ -25,7 +25,7 @@ db.online = false
 # Input dataset to map onto graphs, can have multiple files/directories
 # If a path is a directory, ALL files in that folder shall be imported as one
 mapper.dataset.paths = [
-  "input/fzk_haus_lod3_v3.gml"
+  "input/citygml/fzk_haus_lod3_v3.gml"
 ]
 
 # Do not map the following vertex classes (e.g. com.example.project.Class)
@@ -64,6 +64,8 @@ neo4j.rtree.img.path = "output/img"
 
 # CityGML version
 citygml.version = "v3_0"
+# OR CityJSON
+cityjson = false
 
 # CityGML export
 citygml.export.partition = 0
