--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.citygml4j/citygml4j
     implementation 'org.citygml4j:citygml4j:2.13.0'
 
+    // https://mvnrepository.com/artifact/org.citygml4j/citygml4j-cityjson
+    implementation 'org.citygml4j:citygml4j-cityjson:3.2.2'
+
     // https://mvnrepository.com/artifact/org.neo4j/neo4j
     implementation 'org.neo4j:neo4j:5.25.1'
 
