--- a/lib/config/examples/cityjson.conf
+++ b/lib/config/examples/cityjson.conf
@@ -25,7 +25,7 @@ db.online = false
 # Input dataset to map onto graphs, can have multiple files/directories
 # If a path is a directory, ALL files in that folder shall be imported as one
 mapper.dataset.paths = [
-  "input/citygml/fzk_haus_lod2_v2.gml"
+  "input/cityjson/lod2_buildings_v2.json"
 ]
 
 # Do not map the following vertex classes (e.g. com.example.project.Class)
@@ -65,9 +65,9 @@ neo4j.rtree.img.path = "output/img"
 # CityGML version
 citygml.version = "v2_0"
 # OR CityJSON
-cityjson = false
+cityjson = true
 
 # CityGML export
 citygml.export.partition = 0
 citygml.export.bbox = "457842.0, 5439083.0, 111.8, 457854.0, 5439093.0, 118.3"
-citygml.export.path = "output/citygml/export_v2.gml"
+citygml.export.path = "output/cityjson/export.json"
