--- a/lib/config/examples/citygmlv2.conf
+++ b/lib/config/examples/citygmlv2.conf
@@ -17,7 +17,7 @@ db.name = "neo4j"
 db.batch.size = 1000
 
 # Keep database online
-db.online = false
+db.online = true
 
 # MAPPER CONFIGURATIONS
 # .....................
