Wrap embedded app in Neo4j service for publishing

--- a/lib/config/examples/citygmlv1.conf
+++ b/lib/config/examples/citygmlv1.conf
@@ -16,14 +16,13 @@ db.name = "neo4j"
 # Number of database transactions to be processed before committing
 db.batch.size = 1000
 
-# Keep database online
-db.online = true
-
 # MAPPER CONFIGURATIONS
 # .....................
 
 # Input dataset to map onto graphs, can have multiple files/directories
 # If a path is a directory, ALL files in that folder shall be imported as one
+# The first path will be mapped to partition index 0
+# The second to partition index 1, and so on
 mapper.dataset.paths = [
   "input/citygml/fzk_haus_lod2_v1.gml"
 ]
