--- a/lib/config/neo4j.conf
+++ b/lib/config/neo4j.conf
@@ -6,7 +6,7 @@
 #*****************************************************************
 
 # Paths of directories in the installation.
-#server.directories.data=data
+server.directories.data=/home/gradle/src/3dcitykg/lib/output/neo4jDB
 #server.directories.plugins=plugins
 #server.directories.logs=logs
 #server.directories.lib=lib
