--- a/lib/config/neo4j.conf
+++ b/lib/config/neo4j.conf
@@ -6,7 +6,7 @@
 #*****************************************************************
 
 # Paths of directories in the installation.
-server.directories.data=/home/gradle/src/3dcitykg/lib/output/neo4jDB
+server.directories.data=/home/gradle/src/3dcitykg/lib/output/neo4jDB/data
 #server.directories.plugins=plugins
 #server.directories.logs=logs
 #server.directories.lib=lib
@@ -796,6 +796,6 @@ server.jvm.additional=-Dlog4j2.disable.jmx=true
 # Other Neo4j system properties
 #********************************************************************
 
-dbms.memory.heap.initial_size=512m
-dbms.memory.heap.max_size=1G
-dbms.memory.pagecache.size=512m
+server.memory.heap.initial_size=512m
+server.memory.heap.max_size=1G
+server.memory.pagecache.size=512m
