--- a/lib/config/examples/citygmlv1.conf
+++ b/lib/config/examples/citygmlv1.conf
@@ -61,9 +61,9 @@ neo4j.rtree.img.path = "output/img"
 # CITYGML CONFIGURATIONS
 # ......................
 
-# CityGML version
+# CityGML version (v1_0, v2_0, v3_0)
 citygml.version = "v1_0"
-# OR CityJSON
+# OR CityJSON (true, false)
 cityjson = false
 
 # CityGML export
