--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
     id 'application'
 
     // Create a fat jar (if needed)
-    // id 'com.gradleup.shadow' version '8.3.9'
+    id 'com.gradleup.shadow' version '9.1.0'
 }
 
 // Group and version
@@ -18,6 +18,11 @@ version = "1.0.0"
 
 tasks.named("jar") {
     archiveBaseName.set("citykg")
+    manifest {
+        attributes(
+                'Main-Class': 'citykg.app.CityKG'
+        )
+    }
 }
 
 // Java compatibility
@@ -127,10 +132,22 @@ publishing {
     }
 }
 
-// Example if you re-enable shadowJar
-// tasks.named<ShadowJar>("shadowJar") {
-//     archivesName.set("3dcitykg")
-//     archiveVersion.set("1.0.0")
-//     isZip64 = true
-//     destinationDirectory.set(project.rootDir)
-// }
+tasks.named("shadowJar") {
+    archiveBaseName.set("3dcitykg")
+    archiveVersion.set("1.0.0")
+    destinationDirectory.set(project.rootDir)
+    setProperty("zip64", true)
+
+    manifest {
+        attributes('Main-Class': 'citykg.app.CityKG')
+    }
+
+    dependencies {
+        exclude(dependency("org.neo4j:arrow-bom"))
+    }
+
+    // Exclude specific files from the archive
+    exclude('**/META-INF/*.RSA', '**/META-INF/*.SF', '**/META-INF/*.DSA')
+
+    configurations = [project.configurations.runtimeClasspath]
+}
