Disable Neo4j data usage report

--- a/config/neo4j.conf
+++ b/config/neo4j.conf
@@ -41,7 +41,7 @@ dbms.security.auth_enabled=false
 
 # Anonymous usage data reporting
 # To disable, uncomment this line
-#dbms.usage_report.enabled=false
+dbms.usage_report.enabled=false
 
 #*****************************************************************
 # Initial DBMS Settings
