Allow empty bbox in run.conf for export entire dataset

--- a/config/examples/citygmlv3.conf
+++ b/config/examples/citygmlv3.conf
@@ -68,5 +68,6 @@ cityjson = false
 
 # CityGML export
 citygml.export.partition = 0
+# minx, miny, minz, maxx, maxy, maxz  (leave the bbox empty to export entire city model)
 citygml.export.bbox = "457842.0, 5439083.0, 111.8, 457854.0, 5439093.0, 118.3"
 citygml.export.path = "output/citygml/export_v3.gml"
