Add APOC, start case 3 for existing DB

--- a/config/run.conf
+++ b/config/run.conf
@@ -2,7 +2,8 @@
 # 0: Map only using the configurations in this file
 # 1: Export only using an existing database configured in this file
 # 2: Map AND Export using the configurations in this file
-case = 2
+# 3: Open existing database (useful for querying a mapped graph)
+case = 3
 
 # DATABASE CONFIGURATIONS
 # .......................
