--- a/config/neo4j.conf
+++ b/config/neo4j.conf
@@ -682,7 +682,7 @@ db.tx_log.rotation.retention_policy=keep_none
 
 # A comma separated list of procedures and user defined functions that are allowed
 # full access to the database through unsupported/insecure internal APIs.
-dbms.security.procedures.unrestricted=jwt.security.*
+dbms.security.procedures.unrestricted=jwt.security.*,apoc.*
 
 # A comma separated list of procedures to be loaded by default.
 # Leaving this unconfigured will load all procedures found.
